--- a/src/content/graphos/basics/runtime.mdx
+++ b/src/content/graphos/basics/runtime.mdx
@@ -55,7 +55,7 @@ flowchart LR;
   class clients secondary;
 ```
 
-Cloud and self-hosted runtimes are both powered by the Apollo Router—a high-performance runtime runtime packaged as a [standalone binary](https://github.com/apollographql/router).
+Cloud and self-hosted runtimes are both powered by the Apollo Router—a high-performance runtime packaged as a [standalone binary](https://github.com/apollographql/router).
 
 ### Runtime comparison
 
