Clarify new user setup in SSO

--- a/src/content/graphos/org/sso/microsoft-entra-id-integration-oidc-guide.mdx
+++ b/src/content/graphos/org/sso/microsoft-entra-id-integration-oidc-guide.mdx
@@ -78,8 +78,7 @@ To complete the configuration, complete the Apollo-provided link provided in ste
 
 Once submitted, inform your Apollo contact. They will then be able to complete your SSO setup.
 
-Once your SSO setup is finalized, team members who previously had access to GraphOS must log back in via the new SSO setup.
-To give them access, you first need to assign them in Entra.
+Once your SSO setup is finalized, you need to assign users to your GraphOS app in Entra.
 
 ## Assign users in Entra ID
 
