--- a/src/content/graphos/org/sso/microsoft-entra-id-integration-saml-guide.mdx
+++ b/src/content/graphos/org/sso/microsoft-entra-id-integration-saml-guide.mdx
@@ -85,8 +85,7 @@ Setup requires at least a [Cloud Application Administrator](https://learn.micros
 Send your Apollo contact the **App Federation Metadata URL** you previously copied.
 They will then be able to complete your SSO setup.
 
-Once your SSO setup is finalized, team members who previously had access to GraphOS must log back in via the new SSO setup.
-To give them access, you first need to assign them in Entra.
+Once your SSO setup is finalized, you need to assign users to your GraphOS app in Entra.
 
 ## Assign users in Entra ID
 
