--- a/src/content/graphos/org/sso/saml-integration-guide.mdx
+++ b/src/content/graphos/org/sso/saml-integration-guide.mdx
@@ -64,7 +64,9 @@ Send your Apollo contact your IdP SAML XML metadata file. If you can't send this
 
 Your Apollo contact will then be able to complete your SSO setup.
 
-Once your SSO setup is live, assign users to your new Apollo GraphOS application in your IdP. For help assigning the relevant groups and users, contact your SSO or Identity & Access Management team. If organizations members could previously login before you implemented SSO, they must re-login to GraphOS Studio with SSO.
+Once your SSO setup is live, assign users to your new Apollo GraphOS application in your IdP. For help assigning the relevant groups and users, contact your SSO or Identity & Access Management team.
+
+<SSOLegacyUsers />
 
 Once you've confirmed the new setup works as expected, remove any legacy Apollo GraphOS applications in your IdP.
 
