--- a/src/content/shared/sso-entra-id-assign-users.mdx
+++ b/src/content/shared/sso-entra-id-assign-users.mdx
@@ -11,6 +11,7 @@ You may want to begin by adding yourself individually and then testing SSO by cl
 />
 
 Once you've successfully tested your own user's ability to use SSO, add any applicable users or groups.
-When users are first assigned to the Apollo GraphOS application, they must re-login to GraphOS Studio.
+
+<SSOLegacyUsers />
 
 Once you've confirmed the new configuration works for your users, remove any legacy Apollo GraphOS applications in Entra ID or app registrations in Azure AD if you have them.
