--- a/src/content/graphos/org/sso/oidc-integration-guide.mdx
+++ b/src/content/graphos/org/sso/oidc-integration-guide.mdx
@@ -57,6 +57,8 @@ These steps generally require administrative access to your IdP.
 To complete the setup, complete the Apollo-provided link from step 1 with the appropriate information and inform your Apollo contact.
 They will then be able to complete your SSO setup.
 
-Once your SSO setup is live, assign users to your new Apollo GraphOS application in your IdP. For help assigning the relevant groups and users, contact your SSO or Identity & Access Management team. If organizations members could previously login before you implemented SSO, they must re-login to GraphOS Studio with SSO.
+Once your SSO setup is live, assign users to your new Apollo GraphOS application in your IdP. For help assigning the relevant groups and users, contact your SSO or Identity & Access Management team.
+
+<SSOLegacyUsers />
 
 Once you've confirmed the new setup works as expected, remove any legacy Apollo GraphOS applications in your IdP.
