Mark schema proposal notifications as preview

--- a/src/content/graphos/metrics/notifications/index.mdx
+++ b/src/content/graphos/metrics/notifications/index.mdx
@@ -39,8 +39,13 @@ GraphOS can send notifications to the indicated channels:
 
 ## Notification availability
 
+### Plan availability
+
 - Custom webhooks are only available with an Enterprise plan.
 - Schema proposals and notifications about them are only available with an Enterprise plan.
 - Performance alerts are only available with a paid plan.
-- Build status notifications are in [preview](/resources/product-launch-stages#preview).
+
+### Release stage
+
+- Schema proposal and build status notifications are in [preview](/resources/product-launch-stages#preview).
 - Performance alerts are [experimental](/resources/product-launch-stages#experimental-features).
