Add schema proposal webhooks (#839)
* Update overview

* Add proposal stub

* Move setup instructions to shared components

* Rename overview page and create redirect

* Use shared components

* Remove Discord Link from Experimental Feature

* Vale

* Update createNotification usage

* Copyedit

* Add field tables

* Consistency

* Copyedits

* Update meta descriptions

* Add schema proposal details

* Copyedit

* Change "field" to "input"

* Copyedit

* UI update alignment

* Mark schema proposal notifications as preview

--- a/src/content/graphos/metrics/notifications/performance-alerts.mdx
+++ b/src/content/graphos/metrics/notifications/performance-alerts.mdx
@@ -1,7 +1,7 @@
 ---
 title: Performance alerts from GraphOS
-subtitle: Receive notifications whenever metrics exceed defined thresholds
-description: Configure alerts to receive notifications in Slack or PagerDuty instance when specific operation metrics surpass defined thresholds.
+subtitle: Receive notifications when metrics exceed defined thresholds
+description: Configure alerts to receive notifications in Slack or PagerDuty instance when specific request and error metrics for your GraphQL API surpass defined thresholds.
 ---
 
 <Note>
@@ -12,7 +12,8 @@ This feature is only available with a [paid plan](https://www.apollographql.com/
 
 <ExperimentalFeature />
 
-GraphOS can notify your team's Slack workspace or PagerDuty instance whenever a particular metric (such as error rate) for a particular GraphQL operation exceeds a defined threshold. This is useful for detecting anomalies, especially following a release.
+GraphOS can alert your team's Slack workspace or PagerDuty when a metric, like error rate, for a GraphQL operation goes over a set threshold.
+These alerts are useful for detecting anomalies, especially following a release.
 
 <img
   src="../../img/integrations/slack-notification.png"
@@ -23,17 +24,24 @@ GraphOS can notify your team's Slack workspace or PagerDuty instance whenever a 
 
 ## Supported metrics
 
-You can configure performance alerts to trigger for any of the following metrics:
+You can configure performance alerts for any of the following metrics:
 
 - **Request rate:** requests per minute
 - **Request duration:** p50/p95/p99 service time
 - **Error rate:** errors per minute
-- **Error percentage:** the number of requests with errors, divided by total
-  requests
+- **Error percentage:** the number of requests with errors divided by the total requests
 
-Each performance alert you define can apply to either a specific operation or any operation. If you define an alert that applies to a specific operation, the "any operation" alerts for the same metric no longer apply to that operation (that is, the more specific alert takes precedence).
+Each performance alert you define can apply to either a specific operation or any operation.
+If you define an alert that applies to a specific operation, the "any operation" alerts for the same metric no longer apply to that operation.
+That is, the more specific alert takes precedence.
 
 ## Setup
+
+<Note>
+
+If you want to receive notifications via both Slack and PagerDuty, repeat these setup steps for both.
+
+</Note>
 
 1. Go to your graph's Settings page in [GraphOS Studio](https://studio.apollographql.com/?referrer=docs-content).
 2. Select the **Reporting** tab.
@@ -42,6 +50,19 @@ Each performance alert you define can apply to either a specific operation or an
 5. Select a **Channel** to send alerts to. You can select **New Channel** from the dropdown if you haven't yet configured the Slack channel or PagerDuty instance you want to use.
 6. Click **Create**.
 
+## Configure a new channel
+
+### Slack
+
+<ConfigureSlackNotification />
+
+### PagerDuty
+
+<ConfigurePagerDutyNotification />
+
 ## Threshold window
 
-Thresholds are measured against a rolling five-minute window. For example, let's say you configure an alert to trigger when an operation's error rate exceeds 5%. If 6 out of 100 executions of that operation result in an error during a five-minute period, the alert will trigger with an error rate of 6%. When the error rate falls back below 5%, your notification will resolve.
+Thresholds are measured against a rolling five-minute window.
+For example, let's say you configure an alert to trigger when an operation's error rate exceeds 5%.
+If 6 out of 100 executions of that operation result in an error during a five-minute period, the alert will trigger with an error rate of 6%.
+When the error rate falls back below 5%, your alert will resolve.
