Update Okta instructions for self-serve

--- a/src/content/graphos/org/sso/okta-integration-guide.mdx
+++ b/src/content/graphos/org/sso/okta-integration-guide.mdx
@@ -21,16 +21,18 @@ Setup requires:
 
 </Note>
 
-SAML-based SSO setup has two main steps:
+SAML-based SSO setup has these main steps:
 
-- Create a custom Okta app integration for Apollo GraphOS.
-- Share your Okta app integration's SAML metadata with Apollo via GraphOS Studio.
+1. Share you SSO details with Apollo
+2. Create a custom Okta app integration for Apollo GraphOS
+3. Share your Okta app integration's SAML metadata with Apollo
+4. Verify your your Okta app integration's details in GraphOS
 
 The SSO setup wizard in GraphOS Studio guides you through these steps.
 
-### Create a custom Okta app integration
+### Step 1. Share you SSO details
 
-1. Go to [GraphOS Studio](https://studio.apollographql.com?referrer=docs-content). Open the **Settings** page from the top navigation. Open the **Org management** tab from the left sidebar and click **Enable SSO**.
+1. Go to [GraphOS Studio](https://studio.apollographql.com?referrer=docs-content). Open the **Settings** page from the top navigation. Open the **Org management** tab from the left sidebar and click **Enable SSO**. A setup wizard appears.
 
    <Note>
 
@@ -38,9 +40,13 @@ The SSO setup wizard in GraphOS Studio guides you through these steps.
 
    </Note>
 
-2. Follow the prompts in the setup wizard to enter your SSO details.
-3. Once you get to **Step 2: Your IdP and Apollo** in the wizard, open your Okta Administrator Dashboard in a separate browser tab.
-4. In your Okta Administrator Dashboard, go to the **Applications** view and click **Create App Integration**.
+2. Enter the **Email domain**(s) you are setting SSO up for. Click **Continue**.
+3. Select **SAML** as the setup type. Click **Continue**.
+
+### Step 2. Create a custom Okta app integration
+
+1. Once you get to **Step 2: Your IdP and Apollo** in the wizard, open your Okta Administrator Dashboard in a separate browser tab.
+2. In your Okta Administrator Dashboard, go to the **Applications** view and click **Create App Integration**.
 
    <Note>
 
@@ -48,8 +54,8 @@ The SSO setup wizard in GraphOS Studio guides you through these steps.
 
    </Note>
 
-5. In the dialog that appears, select **SAML 2.0** as your sign-in method. Click **Next**.
-6. The **Create SAML Integration** dialog appears. In the **General Settings** step, provide the following values:
+3. In the dialog that appears, select **SAML 2.0** as your sign-in method. Click **Next**.
+4. The **Create SAML Integration** dialog appears. In the **General Settings** step, provide the following values:
 
    - **App name**: `Apollo GraphOS`
    - **App logo**: [Apollo logo](../../img/sso/apollo-sk-logo.jpg) (optional)
@@ -63,14 +69,14 @@ The SSO setup wizard in GraphOS Studio guides you through these steps.
 
    Then click **Next**.
 
-7. In the **Configure SAML** step, provide the following values:
+5. In the **Configure SAML** step, provide the following values:
 
    - **Single sign on URL**: Single sign-on URL provided by the setup wizard
      - Also check **Use this for Recipient URL and Destination URL**.
    - **Audience URI (SP Entity ID)**: Entity ID provided by by the setup wizard
    - Leave the default values for other settings, including leaving the **RelayState** blank.
 
-8. Still in the **Configure SAML** step, scroll down to **Attribute Statements**. Set values for the following attributes:
+6. Still in the **Configure SAML** step, scroll down to **Attribute Statements**. Set values for the following attributes:
 
    - `sub`: `user.email`
      - The `sub` attribute should uniquely identify any particular user to GraphOS. In most cases, `user.email` provides this unique mapping.
@@ -87,10 +93,10 @@ The SSO setup wizard in GraphOS Studio guides you through these steps.
 
    Then click **Next**.
 
-9. In the **Feedback** step, select **I'm an Okta customer adding an internal app**. Click **Finish**.
-10. Back in the setup wizard in GraphOS Studio, click **Continue** to share SSO metadata with Apollo.
+7. In the **Feedback** step, select **I'm an Okta customer adding an internal app**. Click **Finish**.
+8. Back in the setup wizard in GraphOS Studio, click **Continue** to share SSO metadata with Apollo.
 
-### Share SAML metadata with Apollo
+### Step 3. Share SAML metadata with Apollo
 
 1. In your Okta Administrator Dashboard, in the Okta SAML app integration you just created, go to the **Sign On > Settings > SAML 2.0 > Metadata details** section.
 
@@ -102,8 +108,11 @@ The SSO setup wizard in GraphOS Studio guides you through these steps.
    />
 
 2. Copy and paste the contents of the **Metadata URL** text box into the setup wizard in GraphOS Studio and click **Continue**.
-3. GraphOS Studio populated your SSO metadata based on the **Metadata URL** you entered. Verify the values are correct and click **Continue**.
-4. Click **Continue** to enable SSO in GraphOS Studio.
+
+### Step 4. Verify details
+
+1. The GraphOS Studio setup wizard populates your SSO metadata based on the **Metadata URL** you entered in the last step. Verify the values are correct and click **Continue**.
+2. On the **Enable SSO** step of the wizard, click **Continue** to enable SSO in GraphOS Studio.
 
 Once your SSO setup is finalized, you need to assign users to your custom app in Okta.
 
